Wed Aug  4 15:47:21 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): no need to create the directory
	  at each library file. this change makes making ext faster.

Wed Aug  4 06:25:04 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_atime): Pathname#atime translated from
	  pathname.rb.

Tue Aug  3 21:16:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (Init_Random): add Random::DEFAULT.

Tue Aug  3 21:01:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_check_hash_type): added.

Tue Aug  3 20:30:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_eq): never equal to infinity.
	  [ruby-core:31603]

	* rational.c (nurat_div): hack for integral float divisor.

Tue Aug  3 14:42:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/mkext.rb: remove purelib, fixes a bug in r28440, r28441.

	* spec/default.mspec: ditto.

	* template/Doxyfile.tmpl: ditto.

Tue Aug  3 14:19:42 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rdoc/ri/driver.rb (setup_pager): no need to check the existence
	  of pagers. the following code checks whether they are executable or
	  not.

Tue Aug  3 12:03:57 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* tool/runruby.rb: no purelib.

Tue Aug  3 07:52:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/purelib.rb: no longer used since the default load path of
	  miniruby is empty.

Tue Aug  3 00:53:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def, vm_core.h: fixed typo.  reported by Rocky Bernstein
	  <rockyb AT rubyforge.org> at [ruby-core:31596].

Mon Aug  2 21:51:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): rb_str_set_len modifies ptr
	  since r26303.

Mon Aug  2 21:16:03 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: NONAMELESSUNION defined only if gcc
	  version is older than 3.4.4. [ruby-core:31567] [Bug #3637]
	* ext/win32ole/extconf.rb: ditto.
